# ufbx_base64_decode_bugfix

./: .gitignore  CMakeLists.txt  README.md  main.c  ufbx_base64_fix.patch  ufbx_fixed.c
